--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,7 @@ jobs:
           dotnet-version: '8.0.303'
 
       - name: Build project (${{ matrix.runtime }})
-        run: dotnet publish -c Release -r ${{ matrix.runtime }} --self-contained true -o ./Exports/${{ matrix.runtime }} -p:PublishSingleFile=true -p:PublishTrimmed=true
+        run: dotnet publish -c Release -r ${{ matrix.runtime }} --self-contained true -o ./Exports/${{ matrix.runtime }} -p:PublishSingleFile=true -p:EnableCompressionInSingleFile=true
 
       - name: Add software license
         run: cp LICENSE ./Exports/${{ matrix.runtime }}/LICENSE.txt
