--- a/linconsol.csproj
+++ b/linconsol.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="LibreHardwareMonitorLib" Version="0.9.4" />
     <PackageReference Include="System.Management" Version="9.0.1" />
   </ItemGroup>
 
