--- a/linconsol.csproj
+++ b/linconsol.csproj
@@ -5,11 +5,12 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <ApplicationIcon>res/public/icon.ico</ApplicationIcon>
+    <ApplicationIcon>Resources/Public/icon.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="LibreHardwareMonitorLib" Version="0.9.4" />
+    <PackageReference Include="SharpDX.DXGI" Version="4.2.0" />
     <PackageReference Include="System.Management" Version="9.0.1" />
   </ItemGroup>
 
