feat[config]: Добавить манифест для сборки приложения в настройки csproj

--- a/linconsol.csproj
+++ b/linconsol.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <ApplicationIcon>Resources/Public/icon.ico</ApplicationIcon>
+    <ApplicationManifest>Properties/app.manifest</ApplicationManifest>
   </PropertyGroup>
 
   <ItemGroup>
